--- a/index.html
+++ b/index.html
@@ -1,47 +1,52 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="倪韩龙的博客-GitHub.io : 倪韩龙的博客">
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<title>壁纸浏览</title>
+		<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,minimal-ui" />
+		<meta name="format-detection" content="email=no" />
+		<meta name="format-detection" content="address=no" />
+		<meta name="format-detection" content="telephone=no" />
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/style.css" />
+		<script type="text/javascript" src="js/pageSwitch.js"></script>
+	</head>
 
-    <title>倪韩龙的博客-GitHub.io</title>
-  </head>
+	<body>
+		<div id="wrap">
+			<div id="pages">
+				<div class="page page1">
+					<div class="box"><img src="img/1.jpg" alt="" /></div>
+				</div>
+				<div class="page page2">
+					<div class="box"><img src="img/2.jpg" alt="" /></div>
+				</div>
+				<div class="page page3">
+					<div class="box"><img src="img/3.jpg" alt="" /></div>
+				</div>
+				<div class="page page4">
+					<div class="box"><img src="img/4.jpg" alt="" /></div>
+				</div>
+			</div>
+		</div>
 
-  <body>
+	</body>
+	<script>
+		var reg = location.search.match(/ts=([^&]*)/),
+			ts = reg && reg[1] || 'flipClockY',
+			a = new pageSwitch('pages', {
+				duration: 1000,
+				start: 0,
+				direction: 0,
+				loop: true,
+				ease: /flip(?!Paper)/.test(ts) ? 'bounce' : 'ease',
+				transition: ts,
+				mouse: true,
+				mousewheel: true,
+				arrowkey: true
+			})
+	</script>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/nihanlong">View on GitHub</a>
-
-          <h1 id="project_title">倪韩龙的博客-GitHub.io</h1>
-          <h2 id="project_tagline">倪韩龙的博客</h2>
-
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>
-<a id="nihanlonggithubio" class="anchor" href="#nihanlonggithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>nihanlong.github.io</h1>
-
-<p>倪韩龙的博客</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
 </html>
