--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div id="wrap">
 			<div id="pages">
 				<div class="page page1">
-					<div class="box"><img src="img/1.jpg" alt="" /></div>
+					<div class="box"><img src="img/1.jpg" alt="111" /></div>
 				</div>
 				<div class="page page2">
 					<div class="box"><img src="img/2.jpg" alt="" /></div>
