--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<script src="js/behavior.js"></script>
 		<script type="text/javascript" src="js/jmpress.min.js"></script>
 		<script type="text/javascript" src="js/dasky.eval.js"></script>
-		<script type="text/javascript" src="js/video.js" ></script>
+		<script type="text/javascript" src="js/video.js"></script>
 		<script type="text/javascript">
 			$(function() {
 				$('#dasky').Dasky()
@@ -25,12 +25,16 @@
 	</head>
 
 	<body>
+		<div class="phone-tip">
+			<p>请使用PC浏览器访问！</p>
+		</div>
+
 		<header>
 			<ul id="header-list">
 				<li>联系我
 					<div class="hovercontact">
 						<img src="images/phone.png">
-						<p>18641146235</p>
+						<p>17521591847</p>
 						<img src="images/mail.png" class="mail">
 						<p class="mail-text">842752344@qq.com</p>
 					</div>
