--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 	<head>
+		<meta name="referrer" content="no-referrer" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="favicon.ico" />
@@ -82,6 +83,46 @@
 
 				<div class="profile">
 					<div id="dasky">
+						<!-- 2019 -->
+						<div class="step year">
+							<div class="dsk-titlenode">2019</div>
+							<div class="dsk-content">
+								<p class="dsk-year-info">棋牌告一段落，开始研发H5端游。</p>
+							</div>
+						</div>
+						<div class="step">
+							<div class="dsk-circle">06/29</div>
+							<h2 class="dsk-circle-title">仙战</h2>
+							<div class="dsk-content">
+								<div class="dsk-info">
+									<h2>仙战</h2>
+									<p>《仙战》是一款仙侠题材的重度H5游戏 ，游戏创作了御剑飞行、上清神器等功能，并加入了吃鸡大作战、仙盟争霸等PVP玩法。游戏画面精良，玩法多样，并且运行流畅，在多个渠道的测试中都获得了S级的评价。</p>
+									<a href="http://game.fire2333.com/home/ac?action=/home/game/a/1111/g/200053" class="dsk-link">试玩游戏</a>
+								</div>
+								<img src="images/game10.png" alt="" />
+							</div>
+						</div>
+						
+						<!-- 2018 -->
+						<div class="step year">
+							<div class="dsk-titlenode">2018</div>
+							<div class="dsk-content">
+								<p class="dsk-year-info">2018年，工作第一年，开发了棋牌游戏平台。</p>
+							</div>
+						</div>
+						<div class="step">
+							<div class="dsk-circle">09/11</div>
+							<h2 class="dsk-circle-title">棋牌游戏</h2>
+							<div class="dsk-content">
+								<div class="dsk-info">
+									<h2>游戏大厅</h2>
+									<p>平台是一个游戏大厅加多个棋牌游戏的模式，游戏大厅与子游戏完全独立，所有子游戏都能快速加到某个游戏大厅，从而实现开发周期短，可定制度高。</p>
+									<a href="https://res.yl.66huyu.cn/platform/web/index.html?port=10052&ip=s2.yl.66huyu.cn" class="dsk-link">试玩游戏</a>
+								</div>
+								<img src="images/game9.png" alt="" />
+							</div>
+						</div>
+
 						<!-- 2017 -->
 						<div class="step year">
 							<div class="dsk-titlenode">2017</div>
@@ -99,18 +140,6 @@
 									<a href="#" class="dsk-link game1">查看视频</a>
 								</div>
 								<img src="images/game1.png" alt="" />
-							</div>
-						</div>
-						<div class="step">
-							<div class="dsk-circle">3/16</div>
-							<h2 class="dsk-circle-title">硬件交互</h2>
-							<div class="dsk-content">
-								<div class="dsk-info">
-									<h2>硬件交互</h2>
-									<p>使用Unity和Arduino开发板，接上各种传感器来进行游戏。共开发了三款游戏：一是跑酷游戏，通过陀螺仪控制角色左右移动并躲避障碍；二是类连连看音乐游戏，通过压力传感器进行输入，输入正确则播放音乐；三是造字游戏，通过红外传感器识别部首，并两两组合成汉字。</p>
-									<a href="#" class="dsk-link game2">查看视频</a>
-								</div>
-								<img src="images/game2.png" alt="" />
 							</div>
 						</div>
 
